commented out the ignore of .env file in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ target/
 !**/src/test/**/target/
 
 ### PRIVATE RESOURCES ###
-**/resources/.env
+#**/resources/.env
 **/resources/ip2location.properties
 **/resources/static/rsc/IP2LOCATION-LITE-DB11.BIN.ZIP
 **/resources/static/rsc/IP2LOCATION-LITE-DB11.IPV6.BIN.ZIP
